--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "^51.0.9",
+    "expo-sqlite": "^14.0.3",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-animatable": "^1.4.0",
-    "typescript": "~5.3.3"
+    "react-native-sqlite-storage": "^6.0.1",
+    "typescript": "~5.3.3",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
